source/assets/app/components/skills-section/skills-section.scss
@import 'components/common/common';

.skills-section {
  @extend .two-cols-section;

  .item-body {
    white-space: pre-line;
  }

  .logos {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    padding: 10px 0;
    border-bottom: 1px solid rgba(104, 194, 236, 0.1);
    margin-bottom: 35px;

    img {
      width: 50px;
      margin: 10px 5px;
    }
  }

  .link {
    text-decoration: underline;
    color: $orange;
  }

  .justified {
    text-align: justify;
  }

  .fullstack-matrix {
    position: relative;
    height: 453px;
    padding-bottom: 20px;

    @media screen and (max-width: 435px) {
      transform: scale(0.6);
      margin-top: -117px;
      height: 310px;
    }
  }

  .layer {
    position: relative;
    width: 150px;
    height: 130px;
    background-position: 50% 50%;
    background-repeat: no-repeat;
    background-color: $orange;
    cursor: pointer;
    z-index: 1;

    -webkit-transition: background-color 0.5s;
    -moz-transition: background-color 0.5s;
    -o-transition: background-color 0.5s;
    transition: background-color 0.5s;

    &:hover {
      background-color: $light_orange;
    }

    //
    // hexagon left and right wings
    &:before, &:after {
      content: "";
      position: absolute;
      top: 0;
      border: 65px solid white;
      border-right-width: 0;
      border-left: 40px solid transparent;
    }

    &:before {
      left: 0;
      -ms-transform: rotate(180deg);
      -webkit-transform: rotate(180deg);
      transform: rotate(180deg);
    }

    &:after {
      right: 0;
    }

    .icon {
      width: 100%;
      height: 100%;
      position: absolute;
      z-index: 1;
      background-position: 50% 50%;
      background-repeat: no-repeat;
      background-size: 66%;
    }
  }

  .frontend-layer {
    @extend .layer;
    position: absolute;
    left: calc(50% + -215px);
    top: 70px;

    .icon { background-image: image-url('frontend.png'); }
   }

  .ios-layer {
    @extend .layer;
    position: absolute;
    right: calc(50% + -215px);
    top: 70px;

    .icon { background-image: image-url('ios.png'); }
   }

  .backend-layer {
    @extend .layer;
    position: absolute;
    left: calc(50% - 75px);
    top: 155px;

    .icon { background-image: image-url('backend.png'); }
   }

  .infrastructure-layer {
    @extend .layer;
    position: absolute;
    left: calc(50% - 75px);
    top: 320px;

    .icon { background-image: image-url('infrastructure.png'); }
   }

  .layer-connector {
    width: 2px;
    height: 25px;
    z-index: 2;
    background-color: $black;
    position: absolute;
  }

  .connector-infrastructure-backend {
    @extend .layer-connector;
    top: 290px;
    left: 50%;
  }

  .connector-backend-ios {
    @extend .layer-connector;
    top: 164px;
    right: calc(50% - 70px);
    -ms-transform: rotate(55deg);
    -webkit-transform: rotate(55deg);
    transform: rotate(55deg);
  }

  .connector-backend-frontend {
    @extend .layer-connector;
    top: 164px;
    left: calc(50% - 70px);
    -ms-transform: rotate(-55deg);
    -webkit-transform: rotate(-55deg);
    transform: rotate(-55deg);
  }

  .text-bubble {
    width: 150px;
    padding: 10px;
    border: 2px solid $orange;
    border-radius: 4px;
    background-color: $white;
    color: $black;
    z-index: 10;
    cursor: pointer;

    @media screen and (max-width: 435px) {
      display: none;
    }

    h5 {
      font-size: 16px;
      margin-bottom: 5px;
    }

    p {
      font-size: 13px;
    }

    a {
      display: inline-block;
      font-size: 13px;
      margin-top: 2px;
    }
  }

  .frontend-text {
    @extend .text-bubble;
    position: absolute;
    top: 0;
    left: 0;
  }

  .ios-text {
    @extend .text-bubble;
    position: absolute;
    top: 0;
    right: 0;
  }

  .backend-text {
    @extend .text-bubble;
    position: absolute;
    top: 240px;
    left: 16%;

    @media screen and (max-width: 615px) {
      left: 0;
    }

  }

  .infrastructure-text {
    @extend .text-bubble;
    position: absolute;
    top: 281px;
    right: 16%;

    @media screen and (max-width: 615px) {
      right: 0;
    }
  }

  .skill-extended {
    margin-top: 60px;
    &::after {
      content: "";
      display: block;
      clear: both;

    }

    p {
      white-space: pre-line;
      clear: both;
    }

    h3 {
      display: flex;
      align-items: center;
      margin-bottom: 10px;
      color: $black;
      text-align: center;
      justify-content: center;

      &::before {
        content: "";
        display: block;
        width: 100px;
        height: 2px;
        margin-right: 20px;
        background-color: $orange;
      }

      &::after {
        content: "";
        display: block;
        width: 100px;
        height: 2px;
        margin-left: 20px;
        background-color: $orange;
      }
    }

    a {
      font-style: italic;
      color: $black;
      text-decoration: none;

      &:hover {
        text-decoration: underline;
      }
    }

    img {
      display: block;
      margin: 20px auto;
      width: 70%;
      border: 1px solid $gray;
    }

    .more {
      float: right;
      margin-bottom: 10px;
      color: $orange;
      text-decoration: none;
      font-style: normal;
      font-weight: bold;
      font-size: 18px;
    }
  }
}

